# capnzero-benchmark

./: LICENSE
benchmark/: CMakeLists.txt  package.xml
benchmark/cmake/: GenerateProtobuff.cmake
benchmark/flatbuffers/: string.fbs
benchmark/include/benchmark/: BenchmarkFlatbuffers.h
benchmark/include/capnzero-base-msgs/: string.capnp.c++  string.pb.cc  string.pb.h  string_generated.h
benchmark/include/sbe/: MessageHeader.h  MessageSBE.h  VarStringEncoding.h
benchmark/msg/: sbe_schema.xml  string.capnp  string.proto
benchmark/src/benchmark/: BenchmarkProtobuf.cpp  benchmark.cpp
capnzero/: CMakeLists.txt  package.xml
capnzero/cmake/: FindFlatBuffers.cmake
capnzero/flatbuffers/: CMakeLists.txt  Makefile  cmake_install.cmake  string.fbs
capnzero/include/benchmark/: BenchmarkCapnProto.h  BenchmarkFlatbuffers.h  BenchmarkMsgPack.h  BenchmarkProtobuf.h  BenchmarkSBE.h
capnzero/include/capnzero/: CapnZero.h  Message.h  PublisherCapnProto.h  PublisherFlatbuffers.h  PublisherMsgPack.h  PublisherProtobuf.h  PublisherSBE.h  SubscriberCapnProto.h  SubscriberFlatbuffers.h  SubscriberMsgPack.h  SubscriberProtobuf.h  SubscriberSBE.h
capnzero/include/capnzero-base-msgs/: Message.h  MessageHeader.h  VarStringEncoding.h  string.capnp.c++  string.capnp.h  string_generated.h
capnzero/include/sbe/: GroupSizeEncoding.h
capnzero/msg/: sbe_schema.xml  string.capnp  string.proto
capnzero/sbe/: CMakeLists.txt
capnzero/src/: PublisherCapnProto.cpp  PublisherFlatbuffers.cpp  PublisherMsgPack.cpp  PublisherProtobuf.cpp  PublisherSBE.cpp  SubscriberCapnProto.cpp  SubscriberFlatbuffers.cpp  SubscriberMsgPack.cpp  SubscriberProtobuf.cpp  SubscriberSBE.cpp  echo.cpp  monitor.cpp  proxy.cpp  proxyListenerExample.cpp  pub.cpp
capnzero/src/benchmark/: BenchmarkCapnProto.cpp  BenchmarkFlatbuffers.cpp  BenchmarkMsgPack.cpp  BenchmarkProtobuf.cpp  BenchmarkSBE.cpp  benchmark.cpp
monitor/: CMakeLists.txt  package.xml
monitor/src/: monitorReceiver.cpp
proxy/: CMakeLists.txt  package.xml
proxy/src/: proxy.cpp
