<?xml version="1.0"?>
<package format="2">
  <name>zeromq_encoding_benchmark</name>
  <version>0.0.0</version>
  <description>Benchmark for ZeroMQEncoding</description>

  <maintainer email="bjoerninorek@gmail.com">Björn-André Schröder</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>capnzero</depend>

  <export>
  </export>
</package>
