<?xml version="1.0"?>
<package format="2">
  <name>capnzero</name>
  <version>0.0.0</version>
  <description>capnzero</description>

  <maintainer email="bjoerninorek@gmail.com">Björn-André Schröder</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>id_capnzero</depend>
  <depend>id_manager</depend>

  <export>
  </export>
</package>
