<?xml version="1.0"?>
<package format="2">
  <name>capnzero_monitor</name>
  <version>0.0.0</version>
  <description>Monitor for CapnZero</description>

  <maintainer email="bjoerninorek@gmail.com">Björn-André Schröder</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>capnzero</depend>

  <export>
  </export>
</package>
